--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/usernik"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/welcome"
@@ -30,16 +30,17 @@
         android:drawablePadding="20dp"
         android:elevation="10dp"
         android:fontFamily="sans-serif"
-        android:hint="Email Address"
-        android:padding="15dp" />
+        android:hint="NIK"
+        android:padding="15dp"
+        android:inputType="number"/>
     <EditText
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/kotakbiru"
-        android:layout_below="@id/email"
+        android:layout_below="@id/usernik"
         android:hint="Password"
-        android:password="true"
+        android:inputType="textPassword"
         android:layout_marginTop="10dp"
         android:drawablePadding="20dp"
         android:padding="15dp"
@@ -52,6 +53,7 @@
         android:textSize="15dp"
         android:layout_marginTop="485dp"
         android:layout_marginLeft="10dp"
+        android:visibility="invisible"
         />
 
     <TextView
@@ -61,6 +63,7 @@
         android:textSize="15dp"
         android:layout_marginTop="485dp"
         android:layout_marginLeft="225dp"
+        android:visibility="invisible"
         />
 
     <TextView
